# shoporusni_prompt

./: .gitignore  Cargo.toml
src/: main.rs
src/lib/: cache.rs  config.rs  mod.rs
src/shoporusni/: api.rs  cache.rs  config.rs
