[package]
name = "shoporusni"
version = "0.1.0"
edition = "2021"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
atty = "0.2"
log = "0.4"
simplelog = "0.12"
clap-verbosity-flag = "3.0"
url = "2.2.2"
reqwest = { version = "0.13", features = ["blocking"] }
tempfile = "3.3.0"
humantime = "2.1.0"
serde_json = "1.0"
serde_derive = "1.0"
serde = {version = "1.0", features = ["derive"]}
dirs = "6.0"
colored = "3.0"